--- a/assets.zid.store/themes/27e1e88a-3dc4-4c9b-8720-913b20533f9a/main.css
+++ b/assets.zid.store/themes/27e1e88a-3dc4-4c9b-8720-913b20533f9a/main.css
@@ -27,6 +27,7 @@ body {
   bottom: 45px !important;
 }
 .products-slider .wooler-card-product .product-wrap {
+  border-radius: 20px 20px 0 0;
   margin-top: 50px;
 }
 .products-slider .wooler-card-product .product-info-wrap {
@@ -147,6 +148,9 @@ footer .links-list {
   display: flex;
   justify-content: center;
   direction: rtl;
+}
+.product-wrap {
+  border-radius: 20px 20px 0 0;
 }
 .sub-footer .text-copyright span {
   display: block;
